fixed alignment on my form so it sat at the top of the page properly

--- a/finalProject/styles/form.css
+++ b/finalProject/styles/form.css
@@ -9,7 +9,7 @@
     width: 100%;
     max-width: 1024px;
     justify-self: center;
-    align-self: center;
+    /* align-self: center; */
 }
 
 
